fixing the alignment and updating the application

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -44,14 +44,14 @@ p {
   text-decoration: none;
 }
  .gab{
-  margin-left: 45rem;
+  margin-left: 15rem;
 }
 .gab-1{
   margin-right: 15rem;
 }
 
 .gab-2{
-  margin-right: 25rem;
+  margin-right: 5rem;
 }
 
 
@@ -195,6 +195,7 @@ p {
   align-items: center;
   padding: 1rem;
   height: 100%;
+  margin-left: 6rem;
 }
 
 .text-content {
@@ -205,14 +206,20 @@ p {
 
 .welcome-text {
   color: #f7941d;
-  font-size: 2rem;
-  font-weight: 100;
+  font-size: 1rem;
+  
 }
 
 .subtitle-text {
   color: white;
   font-size: 7rem;
-  font-weight: 700;
+  font-weight: 100;
+}
+
+.header-text{
+  color: white;
+  font-size: 6rem;
+  font-weight: 200;
 }
 
 .cta-button {
@@ -266,35 +273,36 @@ p {
 /* About Section */
 .about-section {
   background-color: white;
-  padding: 2rem;
-  max-width: 70%;
-  margin: 0 auto;
+  padding: 0rem;
+  max-width: 90%;
+  margin:0;
   color: #002060;
-  min-height: 40vh;
+  max-height: 70vh;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
 }
 
 .section-title {
-  font-size: 90px;
-  font-weight: 700;
+  font-size: 4rem;
+  font-weight: 600;
   color: #002060;
   text-align: center;
-  margin-bottom: 1rem;
+  margin-bottom: 0rem;
   margin-top: 10px;
 }
 
 .years-container {
   flex: 0 0 20%;
   text-align: center;
+  margin-top:-350px;
+  top: -150px;
 }
 
 .years-number {
-  font-size: 14rem;
+  font-size:10rem;
   font-weight: 700;
-  color: #e07b0e;
-  margin: 0;
+  color: #fc880c;
 }
 
 .years-label {
@@ -307,8 +315,8 @@ p {
 }
 
 .text-content {
-  margin-top: 30px;
-  flex: 0 0 60%;
+  margin-top: 10px;
+  flex: 0 0 70%;
   padding: 1rem 0;
   text-align: left;
 }
@@ -356,7 +364,7 @@ p {
   margin-top: 1.5rem;
   font-weight: 500;
 }
-
+ /* Why choose us seciton */
 .why {
   background-color: #002060;
   min-height: 50vh;
@@ -364,19 +372,19 @@ p {
 }
 
 .header-why {
-  font-size: 90px;
-  font-weight: 700;
+  font-size: 5rem;
+  font-weight: 400;
 }
 
 .why-section {
-  max-width: 70%;
-  margin: 0 auto;
+  max-width: 80%;
+  margin-left: 7rem;
   padding: 3rem 0;
 }
 
 .why-section .grid-container {
   display: grid;
-  grid-template-columns: 70% 30%;
+  grid-template-columns: 60% 40%;
   gap: 1.5rem;
   position: relative;
 }
@@ -384,6 +392,7 @@ p {
 .why-section .image-container {
   position: relative;
   height: 100%;
+  width: 100%;
 }
 
 .why-section .worker-image {
@@ -391,14 +400,14 @@ p {
   top: -150px;
   bottom: 0;
   width: 100%;
-  height: calc(50vh + 100px);
+  height: calc(90vh + 100px);
   object-fit: cover;
-  border-radius: 0.5rem;
+  border-radius: 0.0rem;
   z-index: 0;
 }
 
 .text-content h2 {
-  font-size: 2.25rem;
+  font-size: 1.25rem;
   font-weight: bold;
   color: white;
   margin-bottom: 1rem;
@@ -445,13 +454,14 @@ p {
   text-align: center;
   min-height: 40vh;
   overflow-x: hidden;
-  max-width: 70%;
+  max-width: 100%;
   margin: 0 auto;
+  margin-left:6rem;
 }
 
 .services-section .services-title {
   color: #002060;
-  font-size: 90px;
+  font-size: 4rem;
   font-weight: 700;
 }
 
@@ -462,6 +472,7 @@ p {
   gap: 20px;
   margin-top: 20px;
   flex-wrap: wrap;
+
 }
 
 .cards-container {
@@ -480,8 +491,8 @@ p {
 .service-card {
   background: #fff;
   padding: 20px;
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -527,8 +538,8 @@ p {
 }
 
 .card-icon {
-  height: 70px;
-  width: 70px;
+  height: 50px;
+  width: 50px;
 }
 
 .service-card h3 {
@@ -536,8 +547,8 @@ p {
 }
 
 .service-image {
-  width: 900px;
-  height: 700px;
+  width: 600px;
+  height: 500px;
   max-width: 100%;
 }
 
@@ -623,12 +634,12 @@ p {
   min-height: 50vh;
   background-color: #002060;
   color: white;
-  max-width: 70%;
+  max-width: 100%;
   margin: 0 auto;
 }
 
 .projects-title {
-  font-size: 5rem;
+  font-size: 4rem;
   font-weight: 700;
   color: white;
   text-align: center;
@@ -654,8 +665,10 @@ p {
 }
 
 .carousel {
-  width: 100%;
+  margin-left:13rem;
+  width: 70%;
   height: 600px;
+  align-items: center;
 }
 
 .carousel-inner {
@@ -705,9 +718,10 @@ p {
   width: 250px;
   height: 150px;
   border: 2px solid #f7941d;
-  border-radius: 10px;
+  border-radius: 0px;
   position: relative;
   margin: 0 auto;
+  
 }
 
 .speech-bubble::after {
